--- a/bower.json
+++ b/bower.json
@@ -17,11 +17,13 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "jquery": "^2.2.3",
-    "bootswatch": "^3.3.6+1",
+    "bootswatch": "^3.3.6",
     "shufflejs": "^4.0.0",
     "ekko-lightbox": "^4.0.2",
     "leaflet": "^0.7.7",
     "html5shiv": "^3.7.3",
-    "respond": "^1.4.2"
+    "respond": "^1.4.2",
+    "components-font-awesome": "^4.6.3",
+    "drmonty-leaflet-awesome-markers": "^2.0.2"
   }
 }
